--- a/examples/minimal_example.ipynb
+++ b/examples/minimal_example.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "# instantiate GradCAM and query for cat\n",
     "GradCAM = saliency(model=vgg16, method=\"GradCAM\", mode=\"2D\", section_names = [conv_section, fc_section], adaptive_layer=adaptive_layer)\n",
-    "preds, maps = GradCAM(b, target_class=[281])"
+    "preds, maps = GradCAM(input_batch, target_class=[281])"
    ]
   },
   {
