--- a/examples/2d_example.ipynb
+++ b/examples/2d_example.ipynb
@@ -114,8 +114,8 @@
     }
    ],
    "source": [
-    "from saliency import saliency\n",
-    "from utils import saliency_plot\n",
+    "from pytorch_saliency.saliency import saliency\n",
+    "from pytorch_saliency.utils import saliency_plot\n",
     "\n",
     "import torch\n",
     "import torchvision.transforms as T\n",
